<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:padding="16dp"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/edit_employee"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
    <EditText
        android:id="@+id/editTextName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_the_employee_name"
        android:textStyle="italic"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingLeft="6dp"
        android:text="@string/select_department"/>
    <Spinner
        android:id="@+id/spinnerDepartment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/departments" />
    <EditText
        android:id="@+id/editTextSalary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_employee_salary"
        android:inputType="number"
        android:digits="01234566789"/>
    <Button
        android:id="@+id/btn_update_employee"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"/>

</LinearLayout>